==> liu2guang/rtdriver/drivers/stm32/hal_lib/usart/drv_usart.c <==
#include <rthw.h>
#include <rtthread.h>
#include <rtdevice.h>
#include "stm32f1xx.h"
#include "drv_usart.h"
#define USART1_CLK_ENABLE()              __HAL_RCC_USART1_CLK_ENABLE()
#define USART1_RX_GPIO_CLK_ENABLE()      __HAL_RCC_GPIOA_CLK_ENABLE()
#define USART1_TX_GPIO_CLK_ENABLE()      __HAL_RCC_GPIOA_CLK_ENABLE()
#define USART1_TX_PIN                    GPIO_PIN_9
#define USART1_TX_GPIO_PORT              GPIOA
#define USART1_RX_PIN                    GPIO_PIN_10
#define USART1_RX_GPIO_PORT              GPIOA
#define USART2_CLK_ENABLE()              __HAL_RCC_USART2_CLK_ENABLE()
#define USART2_RX_GPIO_CLK_ENABLE()      __HAL_RCC_GPIOA_CLK_ENABLE()
#define USART2_TX_GPIO_CLK_ENABLE()      __HAL_RCC_GPIOA_CLK_ENABLE()
#define USART2_TX_PIN                    GPIO_PIN_2
#define USART2_TX_GPIO_PORT              GPIOA
#define USART2_RX_PIN                    GPIO_PIN_3
#define USART2_RX_GPIO_PORT              GPIOA
#define USART3_CLK_ENABLE()              __HAL_RCC_USART3_CLK_ENABLE()
#define USART3_RX_GPIO_CLK_ENABLE()      __HAL_RCC_GPIOB_CLK_ENABLE()
#define USART3_TX_GPIO_CLK_ENABLE()      __HAL_RCC_GPIOB_CLK_ENABLE()
#define USART3_TX_PIN                    GPIO_PIN_10
#define USART3_TX_GPIO_PORT              GPIOB
#define USART3_RX_PIN                    GPIO_PIN_11
#define USART3_RX_GPIO_PORT              GPIOB
#define UART4_CLK_ENABLE()              __HAL_RCC_UART4_CLK_ENABLE()
#define UART4_RX_GPIO_CLK_ENABLE()      __HAL_RCC_GPIOC_CLK_ENABLE()

static rt_err_t stm32_configure(struct rt_serial_device *serial, struct serial_configure *cfg)
{
  struct stm32_uart *uart;

  RT_ASSERT(serial != RT_NULL);
  RT_ASSERT(cfg != RT_NULL);

  uart = (struct stm32_uart *)serial->parent.user_data;

  uart->UartHandle.Init.BaudRate     = cfg->baud_rate;
  uart->UartHandle.Init.HwFlowCtl    = UART_HWCONTROL_NONE;
  uart->UartHandle.Init.Mode         = UART_MODE_TX_RX;
  uart->UartHandle.Init.OverSampling = UART_OVERSAMPLING_16;

  switch (cfg->data_bits)
  {
  case DATA_BITS_8:
      uart->UartHandle.Init.WordLength = UART_WORDLENGTH_8B;
      break;
  case DATA_BITS_9:
      uart->UartHandle.Init.WordLength = UART_WORDLENGTH_9B;
      break;
  default:
      uart->UartHandle.Init.WordLength = UART_WORDLENGTH_8B;
      break;
  }
  switch (cfg->stop_bits)
  {
  case STOP_BITS_1:
      uart->UartHandle.Init.StopBits   = UART_STOPBITS_1;
      break;
  case STOP_BITS_2:
      uart->UartHandle.Init.StopBits   = UART_STOPBITS_2;
      break;
  default:
      uart->UartHandle.Init.StopBits   = UART_STOPBITS_1;
      break;
  }
  switch (cfg->parity)
  {
  case PARITY_NONE:
      uart->UartHandle.Init.Parity     = UART_PARITY_NONE;
      break;
  case PARITY_ODD:
      uart->UartHandle.Init.Parity     = UART_PARITY_ODD;
      break;
  case PARITY_EVEN:
      uart->UartHandle.Init.Parity     = UART_PARITY_EVEN;
      break;
  default:
      uart->UartHandle.Init.Parity     = UART_PARITY_NONE;
      break;
  }
  
  if (HAL_UART_DeInit(&uart->UartHandle) != HAL_OK)
  {
      return RT_ERROR;
  }

  if (HAL_UART_Init(&uart->UartHandle) != HAL_OK)
  {
      return RT_ERROR;
  }

  return RT_EOK;
}

static rt_err_t stm32_control(struct rt_serial_device *serial, int cmd, void *arg)
{
  struct stm32_uart *uart;

  RT_ASSERT(serial != RT_NULL);
  uart = (struct stm32_uart *)serial->parent.user_data;

  switch(cmd)
  {
      case RT_DEVICE_CTRL_CLR_INT:
          /* disable rx irq */
          UART_DISABLE_IRQ(uart->irq);
          /* disable interrupt */
          __HAL_UART_DISABLE_IT(&uart->UartHandle, UART_IT_RXNE);
          break;
      case RT_DEVICE_CTRL_SET_INT:
          /* enable rx irq */
          UART_ENABLE_IRQ(uart->irq);
          /* enable interrupt */
          __HAL_UART_ENABLE_IT(&uart->UartHandle, UART_IT_RXNE);
          break;
  }

  return RT_EOK;
}

static int stm32_putc(struct rt_serial_device *serial, char c)
{
    struct stm32_uart *uart;

    RT_ASSERT(serial != RT_NULL);
    uart = (struct stm32_uart *)serial->parent.user_data;

    while((__HAL_UART_GET_FLAG(&uart->UartHandle, UART_FLAG_TXE) == RESET));
    
    uart->UartHandle.Instance->DR = c;
    
    return 1;
}

static int stm32_getc(struct rt_serial_device *serial)
{
    int ch;
    struct stm32_uart *uart;

    RT_ASSERT(serial != RT_NULL);
    uart = (struct stm32_uart *)serial->parent.user_data;

    ch = -1;
    
    if(uart->UartHandle.Instance->SR & UART_FLAG_RXNE)
    {
        ch = uart->UartHandle.Instance->DR & 0xff;
    }
    
    return ch;
}

static void uart_isr(struct rt_serial_device *serial)
{
    struct stm32_uart *uart = (struct stm32_uart *) serial->parent.user_data;
    
    RT_ASSERT(uart != RT_NULL);
    
    /* UART in mode Receiver -------------------------------------------------*/
    if ((__HAL_UART_GET_FLAG(&uart->UartHandle, UART_FLAG_RXNE) != RESET) &&
            (__HAL_UART_GET_IT_SOURCE(&uart->UartHandle, UART_IT_RXNE) != RESET))
    {
        rt_hw_serial_isr(serial, RT_SERIAL_EVENT_RX_IND);
        /* Clear RXNE interrupt flag */
        __HAL_UART_CLEAR_FLAG(&uart->UartHandle, UART_FLAG_RXNE);
    }
}

int stm32_hw_usart_init(void)
{
    struct stm32_uart *uart;
    struct serial_configure config = RT_SERIAL_CONFIG_DEFAULT;
    
#ifdef RT_USING_UART1
    uart = &uart1;
    uart->UartHandle.Instance = USART1;
    
    serial1.ops    = &stm32_uart_ops;
    serial1.config = config;
    
    /* register UART1 device */
    rt_hw_serial_register(&serial1,
        "uart1",
        RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_INT_RX,
        uart);
#endif /* RT_USING_UART1 */
    
#ifdef RT_USING_UART2
    uart = &uart2;
    uart->UartHandle.Instance = USART2;
    
    serial2.ops    = &stm32_uart_ops;
    serial2.config = config;
    
    /* register UART2 device */
    rt_hw_serial_register(&serial2,
        "uart2",
        RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_INT_RX,
        uart);
#endif /* RT_USING_UART2 */	
    
#ifdef RT_USING_UART3
    uart = &uart3;
    uart->UartHandle.Instance = USART3;
    
    serial3.ops    = &stm32_uart_ops;
    serial3.config = config;
    
    /* register UART3 device */
    rt_hw_serial_register(&serial3,
        "uart3",
        RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_INT_RX,
        uart);
#endif /* RT_USING_UART3 */

#ifdef RT_USING_UART4
    uart = &uart4;
    uart->UartHandle.Instance = UART4;
    
    serial4.ops    = &stm32_uart_ops;
    serial4.config = config;
    
    /* register UART4 device */
    rt_hw_serial_register(&serial4,
        "uart4",
        RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_INT_RX,
        uart);
#endif /* RT_USING_UART4 */

#ifdef RT_USING_UART5
    uart = &uart5;
    uart->UartHandle.Instance = UART5;
    
    serial5.ops    = &stm32_uart_ops;
    serial5.config = config;
    
    /* register UART5 device */
    rt_hw_serial_register(&serial5,
        "uart5",
        RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_INT_RX,
        uart);
#endif /* RT_USING_UART5 */
    
    return 0;
}
